# This file is part of the nesC compiler.
# 
# This file is derived from the RC Compiler. It is thus
#    Copyright (C) 2000-2001 The Regents of the University of California.
# Changes for nesC are
#    Copyright (C) 2002 Intel Corporation
# 
# The attached "nesC" software is provided to you under the terms and
# conditions of the GNU General Public License Version 2 as published by the
# Free Software Foundation.
# 
# nesC is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with nesC; see the file COPYING.  If not, write to
# the Free Software Foundation, 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.

dnl -*- m4 -*-

# force autoconf 2.5 on Debian systems
AC_PREREQ(2.50)

AC_INIT(nesc, 1.2alpha9)
AC_CONFIG_AUX_DIR(config-aux)
AC_CANONICAL_HOST

AC_MSG_CHECKING(for cygwin)
case $host in
  *-*-cygwin*)
    CYGWINHACKS=1
    AC_MSG_RESULT(yes)
    ;;
  *)
    AC_MSG_RESULT(no)
esac
AC_SUBST(CYGWINHACKS)

AM_INIT_AUTOMAKE(nesc, 1.2alpha9)

AC_CONFIG_SUBDIRS(src)

AC_PROG_CC

AC_PATH_PROG(pathperl, perl)
if test -z "$pathperl" ; then
  AC_MSG_ERROR(I can't find perl); 
fi

if test "z$TOSDIR" = "z"; then
  if test -d ../tos; then
    TOSDIR=../tos
  elif test -d ../../tos; then
    TOSDIR=../../tos
  elif test -d $HOME/nest/tos; then
    TOSDIR=$HOME/nest/tos
  else
    AC_MSG_ERROR(I can't find the tos directory);
  fi
fi
TOSDIR=`(cd $TOSDIR;pwd)`
AC_SUBST(TOSDIR)

AC_OUTPUT(
	Makefile
	doc/Makefile
	tools/Makefile
	tools/nescc-mig
	tools/nescc-ncg
	tools/nescc
	tools/nescc-diff
)
